--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -8,7 +8,7 @@ Calculate your loan
 
     <div class="loan-parameter-input">
         <label>Down payment years</label><br/>
-        <input type="text" placeholder="years" ng-model="inputParameters.downPay"/>
+        <input type="text" placeholder="years" ng-model="inputParameters.downPayYears"/>
     </div>
 
     <div class="loan-parameter-input">
