Made directive for output.

--- a/app/index.html
+++ b/app/index.html
@@ -35,5 +35,6 @@
   <script src="js/controllers.js"></script>
   <script src="js/routes.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/directives.js"></script>
 </body>
 </html>
