Renamed directive and added an integer-validator-directive.

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
   <h1>Calculate your loan</h1>
   <div data-ng-controller="InitCtrl">
-      <cc-loan-parameter-input amount="inputParameters.amount" down-pay-years="inputParameters.downPayYears" interest="inputParameters.interest"></cc-loan-parameter-input>
+      <cc-calculator-form amount="inputParameters.amount" down-pay-years="inputParameters.downPayYears" interest="inputParameters.interest"></cc-calculator-form>
   </div>
 
   <!-- In production use:
