Fixed bug in ccInteger directive and added some styling.

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,6 @@
   <title>Loan Calculator</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="css/bootstrap/css/bootstrap-theme.css">
@@ -22,8 +20,8 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <h1>Calculate your loan</h1>
-  <div data-ng-controller="InitCtrl">
+  <div data-ng-controller="InitCtrl" class="container">
+      <h1>Calculate your loan</h1>
       <cc-calculator-form amount="inputParameters.amount" down-pay-years="inputParameters.downPayYears" interest="inputParameters.interest"></cc-calculator-form>
   </div>
 
